--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -37,9 +37,9 @@
               </a>
           </div>
 
-          <h2>Help Kickstart Us</h2>
+          <!-- <h2>Help Kickstart Us</h2>
 
-          <span class="arrow"><i class="icon-chevron-down"></i></span>
+          <span class="arrow"><i class="icon-chevron-down"></i></span> -->
 
         </header>
 
